--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
