--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+public/stylesheets/style.css
+public/stylesheets/style.css.map
+
 # sass git fix
 public/stylesheets/style.css
 public/stylesheets/style.css.map
